# VkFPS

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: g_device.h  g_devmem.h  g_pipeline.h  g_pipeline_builder.h  g_pipeline_cache.h  g_queue.h  g_renderpass.h  g_shader.h  g_swapchain.h  g_transfer_context.h  g_window.h  r_camera.h  r_material.h  r_model.h  r_model_loader.h  r_renderer.h  r_scene.h  r_shaderif.h  u_debug.h  u_defines.h  u_io.h  vk_ext_internal.h
include/graphics/: g_command_buffer.h  g_command_pool.h  g_devmem.h  g_fence.h  g_image.h  g_image_sampler.h  g_pipeline_cache.h  g_queue.h  g_shaderif.h  g_transfer_context.h  g_window.h
include/render/: r_camera.h  r_image_loader.h  r_material.h  r_model.h  r_model_loader.h  r_renderer.h  r_scene.h
include/utils/: u_debug.h
resources/: CMakeLists.txt
resources/materials/: standard.json
resources/models/: bmps_27.mtl  chalet.mtl  plane.mtl  scene-Helicopter-27.mtl
resources/shaders/: deferred.frag  deferred.frag.bak  deferred.vert  deferred.vert.bak  model.frag  model.vert  standard.frag  standard.vert
src/: CMakeLists.txt  g_device.cpp  g_devmem.cpp  g_pipeline.cpp  g_pipeline_builder.cpp  g_pipeline_cache.cpp  g_queue.cpp  g_renderpass.cpp  g_shader.cpp  g_swapchain.cpp  g_transfer_context.cpp  g_window.cpp  r_camera.cpp  r_material.cpp  r_model.cpp  r_model_loader.cpp  r_renderer.cpp  r_scene.cpp  u_debug.cpp  u_io.cpp  vulkan_fps.cpp
src/graphics/: CMakeLists.txt  g_command_buffer.cpp  g_command_pool.cpp  g_device.cpp  g_devmem.cpp  g_fence.cpp  g_image_sampler.cpp  g_pipeline.cpp  g_pipeline_builder.cpp  g_queue.cpp  g_renderpass.cpp  g_swapchain.cpp  g_transfer_context.cpp
src/logic/: CMakeLists.txt
src/render/: CMakeLists.txt  r_camera.cpp  r_image_loader.cpp  r_material.cpp  r_model.cpp  r_model_loader.cpp  r_renderer.cpp  r_scene.cpp
src/utils/: CMakeLists.txt  u_debug.cpp  u_io.cpp
tools/: CMakeLists.txt  cgen.py  glsl-to-header.py  spv-to-header.py  vk-ext-generator.py
